[gd_scene load_steps=4 format=3 uid="uid://bhglggv6ueyu0"]

[ext_resource type="Script" path="res://scripts/game_controller.gd" id="1_jhmg3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_k0dv2"]
bounce = 0.3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyosk"]
size = Vector2(1000, 20)

[node name="DefaultLevel" type="Node2D"]
script = ExtResource("1_jhmg3")

[node name="Background" type="ColorRect"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.231373, 0.34902, 0.596078, 1)

[node name="Floor" type="StaticBody2D"]
position = Vector2(576, 600)
physics_material_override = SubResource("PhysicsMaterial_k0dv2")

[node name="CollisionShape2D" type="CollisionShape2D"]
shape = SubResource("RectangleShape2D_xyosk")

[node name="ColorRect" type="ColorRect"]
offset_left = -500.0
offset_top = -10.0
offset_right = 500.0
offset_bottom = 10.0
color = Color(0.388235, 0.235294, 0.0784314, 1)

[node name="ScoreLabel" type="Label"]
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 18
text = "Score: 0"

[node name="TimeLabel" type="Label"]
offset_left = 1028.0
offset_top = 20.0
offset_right = 1128.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 18
text = "Time: 60"

[node name="SpawnPosition" type="Marker2D"]
position = Vector2(576, 100) 