[gd_scene load_steps=9 format=3 uid="uid://doaqvupbr68d8"]

[ext_resource type="Script" uid="uid://cbhy7p3anenyq" path="res://scripts/game_controller.gd" id="1_k31jy"]
[ext_resource type="Script" uid="uid://bfaltgio4e5fa" path="res://scripts/launcher.gd" id="3_1e6a1"]
[ext_resource type="PackedScene" uid="uid://ckrjns83yjgt3" path="res://scenes/Shape.tscn" id="4_77nxu"]

[sub_resource type="Gradient" id="Gradient_jc2gh"]
offsets = PackedFloat32Array(0, 0.4, 0.8, 1)
colors = PackedColorArray(0.156863, 0.219608, 0.392157, 1, 0.286275, 0.411765, 0.619608, 1, 0.4, 0.65, 0.9, 1, 0.6, 0.8, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e32x8"]
gradient = SubResource("Gradient_jc2gh")
width = 1200
height = 1200
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxn7u"]
bg_color = Color(0.188235, 0.25098, 0.392157, 0.65)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.9, 1, 0.15)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v3ys"]
bg_color = Color(0.188235, 0.25098, 0.392157, 0.65)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.9, 1, 0.15)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwv7i"]
bg_color = Color(0.6, 0.8, 1, 0.8)
border_width_right = 2
border_color = Color(1, 1, 1, 0.3)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 3
shadow_offset = Vector2(0, 2)

[node name="Main" type="Node2D"]
script = ExtResource("1_k31jy")
shape_scene = ExtResource("4_77nxu")

[node name="Background" type="TextureRect" parent="."]
offset_left = -398.0
offset_top = -262.0
offset_right = 1038.0
offset_bottom = 938.0
texture = SubResource("GradientTexture2D_e32x8")
stretch_mode = 1

[node name="GameTitle" type="Node2D" parent="."]
position = Vector2(320, 30)

[node name="TitleBackground" type="Panel" parent="GameTitle"]
offset_left = -320.0
offset_top = -30.0
offset_right = 320.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qxn7u")

[node name="TitleIcon" type="Node2D" parent="GameTitle"]
scale = Vector2(0.6, 0.6)

[node name="Circle" type="ColorRect" parent="GameTitle/TitleIcon"]
offset_left = -120.0
offset_top = -25.0
offset_right = -70.0
offset_bottom = 25.0
color = Color(0.9, 0.4, 0.4, 0.9)
metadata/_edit_group_ = true

[node name="CircleMask" type="Panel" parent="GameTitle/TitleIcon/Circle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qxn7u")

[node name="Square" type="ColorRect" parent="GameTitle/TitleIcon"]
offset_left = -30.0
offset_top = -25.0
offset_right = 30.0
offset_bottom = 25.0
color = Color(0.4, 0.7, 0.9, 0.9)
metadata/_edit_group_ = true

[node name="SquareMask" type="Panel" parent="GameTitle/TitleIcon/Square"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qxn7u")

[node name="Triangle" type="ColorRect" parent="GameTitle/TitleIcon"]
offset_left = 70.0
offset_top = -25.0
offset_right = 120.0
offset_bottom = 25.0
color = Color(0.5, 0.9, 0.5, 0.9)
metadata/_edit_group_ = true

[node name="TriangleMask" type="Panel" parent="GameTitle/TitleIcon/Triangle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qxn7u")

[node name="Launcher" type="Node2D" parent="."]
position = Vector2(320, 720)
script = ExtResource("3_1e6a1")
shape_scene = ExtResource("4_77nxu")
launch_speed = 800.0

[node name="LauncherGlow" type="ColorRect" parent="Launcher"]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
pivot_offset = Vector2(50, 50)
color = Color(0.6, 0.8, 1, 0.15)

[node name="LauncherBase" type="ColorRect" parent="Launcher"]
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(40, 40)
color = Color(0.25, 0.3, 0.5, 1)

[node name="LauncherBaseMask" type="Panel" parent="Launcher/LauncherBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qxn7u")

[node name="LauncherCore" type="ColorRect" parent="Launcher"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
pivot_offset = Vector2(30, 30)
color = Color(0.35, 0.45, 0.65, 1)

[node name="LauncherCoreMask" type="Panel" parent="Launcher/LauncherCore"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qxn7u")

[node name="LauncherInner" type="ColorRect" parent="Launcher"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
pivot_offset = Vector2(20, 20)
color = Color(0.45, 0.6, 0.8, 1)

[node name="LauncherInnerMask" type="Panel" parent="Launcher/LauncherInner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qxn7u")

[node name="Shape" parent="Launcher" instance=ExtResource("4_77nxu")]
visible = false

[node name="LauncherDirection" type="Line2D" parent="Launcher"]
points = PackedVector2Array(0, -20, 0, -120)
width = 5.0
default_color = Color(0.7, 0.85, 1, 0.8)
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LauncherReticle" type="Line2D" parent="Launcher"]
points = PackedVector2Array(-15, -15, 15, 15, 0, 0, 15, -15, -15, 15)
width = 2.0
default_color = Color(0.8, 0.95, 1, 0.7)
antialiased = true

[node name="ScoreDisplay" type="Node2D" parent="."]
position = Vector2(320, 830)

[node name="ScoreBackground" type="Panel" parent="ScoreDisplay"]
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8v3ys")

[node name="ScoreFill" type="Panel" parent="ScoreDisplay"]
offset_left = -200.0
offset_top = -15.0
offset_right = -200.0
offset_bottom = 15.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pwv7i")

[node name="ScoreIcon" type="Node2D" parent="ScoreDisplay"]
position = Vector2(-220, 0)
scale = Vector2(0.5, 0.5)

[node name="Star1" type="Polygon2D" parent="ScoreDisplay/ScoreIcon"]
color = Color(1, 0.85, 0.4, 0.9)
polygon = PackedVector2Array(0, -20, 4, -8, 16, -6, 8, 2, 10, 16, 0, 10, -10, 16, -8, 2, -16, -6, -4, -8)

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(320, 400)
zoom = Vector2(0.8, 0.8)
position_smoothing_enabled = true
position_smoothing_speed = 4.0
editor_draw_limits = true
editor_draw_drag_margin = true
